Update execution count and enhance output message for audio transcription

--- a/Sbobb.ipynb
+++ b/Sbobb.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted audio URL: https://rr5---sn-5hnekn7l.googlevideo.com/videoplayback?expire=1742395608&ei=eITaZ__DA5qL6dsP1JeNiQ0&ip=213.39.100.109&id=o-AMg0v59HJAgHBHBvO-PbK_goChCFi2c_okbjGdQnpIuD&itag=140&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&met=1742374008%2C&mh=1U&mm=31%2C29&mn=sn-5hnekn7l%2Csn-5hne6nz6&ms=au%2Crdu&mv=m&mvi=5&pl=24&rms=au%2Cau&initcwndbps=2485000&siu=1&bui=AccgBcMD0QLsVAjg9eqU6HXi6s79yWdKyB64ekzlK8EQGbr76tV6PXSGpWDc4NW9OqcouSs1&vprv=1&svpuc=1&xtags=acont%3Doriginal%3Alang%3Den&mime=audio%2Fmp4&ns=h40OYPrqnVs4Dalkp9CpRngQ&rqh=1&gir=yes&clen=22047987&dur=1362.291&lmt=1730836166011665&mt=1742373480&fvip=5&keepalive=yes&lmw=1&c=TVHTML5&sefc=1&txp=4532434&n=nsVKog58DDJMAA&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Csiu%2Cbui%2Cvprv%2Csvpuc%2Cxtags%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRQIhAMfXFwK-QAIMNpvc-BAwcuWxVkE6AGCLmFUylS5OelIMAiBVRKysaO3ZiFbekpadXUVEz1VIzTZ7tJsYdONYfB0Vsw%3D%3D&lsparams=met%2Cmh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Crms%2Cinitcwndbps&lsig=AFVRHeAwRAIgVXXfyXTZw7biLBUGLL1hFDhdfdusxHJBgE7jXlCgnIsCIAhZyqejTxovPLnaf5ff9W25b8EpALuVTfLtqOs8_Xlp\n"
+      "Extracted audio URL: https://rr5---sn-5hnekn7l.googlevideo.com/videoplayback?expire=1742395608&ei=eITaZ__DA5qL6dsP1JeNiQ0&ip=213.39.100.109&id=o-AMg0v59HJAgHBHBvO-PbK_goChCFi2c_okbjGdQnpIuD&itag=140&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&met=1742374008%2C&mh=1U&mm=31%2C29&mn=sn-5hnekn7l%2Csn-5hne6nz6&ms=au%2Crdu&mv=m&mvi=5&pl=24&rms=au%2Cau&initcwndbps=2485000&siu=1&bui=AccgBcMD0QLsVAjg9eqU6HXi6s79yWdKyB64ekzlK8EQGbr76tV6PXSGpWDc4NW9OqcouSs1&vprv=1&svpuc=1&xtags=acont%3Doriginal%3Alang%3Den&mime=audio%2Fmp4&ns=h40OYPrqnVs4Dalkp9CpRngQ&rqh=1&gir=yes&clen=22047987&dur=1362.291&lmt=1730836166011665&mt=1742373480&fvip=5&keepalive=yes&lmw=1&c=TVHTML5&sefc=1&txp=4532434&n=nsVKog58DDJMAA&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Csiu%2Cbui%2Cvprv%2Csvpuc%2Cxtags%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRQIhAMfXFwK-QAIMNpvc-BAwcuWxVkE6AGCLmFUylS5OelIMAiBVRKysaO3ZiFbekpadXUVEz1VIzTZ7tJsYdONYfB0Vsw%3D%3D&lsparams=met%2Cmh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Crms%2Cinitcwndbps&lsig=AFVRHeAwRAIgVXXfyXTZw7biLBUGLL1hFDhdfdusxHJBgE7jXlCgnIsCIAhZyqejTxovPLnaf5ff9W25b8EpALuVTfLtqOs8_Xlp\n",
+      "Transcription complete.\n"
      ]
     }
    ],
