Update execution counts and enhance chunk rewriting output in audio transcription

--- a/Sbobb.ipynb
+++ b/Sbobb.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
     "# client = OpenAI(api_key=\"<DeepSeek API Key>\", base_url=\"https://api.deepseek.com\")\n",
     "\n",
     "# Define OpenAI model to use\n",
-    "OPENAI_MODEL = \"chatgpt-4o-mini\"  # Ensure this model is accessible with your API key\n",
+    "OPENAI_MODEL = \"gpt-4o-mini\"  # Ensure this model is accessible with your API key\n",
     "\n",
     "# Define chunking parameters\n",
     "CHUNK_WORD_TARGET = 500  # Target words per chunk\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
      "output_type": "stream",
      "text": [
       "Splitting transcript into chunks based on paragraphs...\n",
-      "Created 2 chunk(s) of ~500 words each.\n"
+      "Created 9 chunk(s) of ~500 words each.\n"
      ]
     }
    ],
@@ -313,17 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rewriting chunk 1/2...\n",
-      "Summary for chunk 1: Il modello concettuale sviluppato utilizza MySQL Workbench per rappresentare dati di sequenziamento RNA di cellule sane e tumorali, strutturati in un'entità principale \"Cellula\" con sottoentità disgiunte \"Healthy Cell\" e \"Tumor Cell\", collegate a un'entità \"Gene\" tramite relazioni molti-a-molti e a una tabella \"Predictions\" per le cellule tumorali tramite una relazione uno-a-uno.\n",
-      "Rewriting chunk 2/2...\n",
-      "Summary for chunk 2: Il testo descrive la struttura di un database relazionale per analisi cellulari, includendo tabelle per predizioni tumorali, componenti principali (PCA), embedding (UMAP), geni e marker, con relazioni uno-a-uno e gerarchiche tra entità, e fornisce istruzioni per implementarlo in MySQL Workbench con chiavi primarie, esterne e vincoli di integrità.\n"
+      "Rewriting chunk 1/9...\n",
+      "Summary for chunk 1: Large language models, like those developed by Google DeepMind, store factual knowledge, such as the association between Michael Jordan and basketball, within specific network segments called multilayer perceptrons, though the exact mechanisms of this storage remain complex and not fully understood.\n",
+      "Rewriting chunk 2/9...\n",
+      "Summary for chunk 2: The text explains how input tokens are transformed into high-dimensional vectors through attention and multilayer perceptrons, enabling the model to predict subsequent tokens by encoding nuanced meanings and relationships, such as gender and factual information, within the vector space.\n",
+      "Rewriting chunk 3/9...\n"
      ]
     }
    ],
@@ -358,7 +359,7 @@
     "        chunk_summary = \"\"\n",
     "\n",
     "    # Append new summary to the running summary\n",
-    "    # Check if summarization of the running summary is enabled\n",
+    "    \n",
     "    if ENABLE_SUMMARY_SUMMARIZATION:\n",
     "        running_summary += f\" {chunk_summary}\"\n",
     "        # Check if running_summary exceeds MAX_SUMMARY_WORDS\n",
