Update execution count to null and rename output file for transcript saving

--- a/Sbobb.ipynb
+++ b/Sbobb.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
     "# Uncomment the lines below to enable saving to a text file\n",
     "\n",
     "try:\n",
-    "    with open(f\"audio_ila_model_{OPENAI_MODEL}.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    with open(f\"transcript_{OPENAI_MODEL}.txt\", \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(final_text)\n",
     "    print(\"Final transcript saved to final_transcript.txt\")\n",
     "except Exception as e:\n",
