No code changes made

--- a/Sbobb.ipynb
+++ b/Sbobb.ipynb
@@ -20,16 +20,14 @@
     "def extract_audio_from_youtube(youtube_url: str) -> str:\n",
     "    \"\"\"\n",
     "    Extracts the best available audio URL (m4a format) from the given YouTube URL.\n",
-    "    Optionally uses a cookies file if the environment variable YOUTUBE_COOKIES is set.\n",
     "    \"\"\"\n",
     "\n",
     "    ydl_opts = {\n",
-    "        \"cookiesfrombrowser\": ('firefox',),\n",
-    "        \"verbose\": 'False'\n",
+    "        \"cookiesfrombrowser\": ('firefox',)\n",
     "    }\n",
     "    \n",
     "    with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
-    "        info = ydl.extract_info(youtube_url)\n",
+    "        info = ydl.extract_info(youtube_url, download=False)\n",
     "\n",
     "    # Iterate over formats in reverse (best quality first) and pick one with audio only\n",
     "    for fmt in reversed(info.get(\"formats\", [])):\n",
@@ -46,6 +44,7 @@
     "    if \"youtube.com\" in audio_url_or_path or \"youtu.be\" in audio_url_or_path:\n",
     "        print(\"YouTube URL detected. Extracting audio URL...\")\n",
     "        audio_url_or_path = extract_audio_from_youtube(audio_url_or_path)\n",
+    "        print(f\"YouTube video audio URL: {audio_url_or_path}\")\n",
     "    \n",
     "    # Set up AssemblyAI\n",
     "    aai.settings.api_key = ASSEMBLYAI_API_KEY\n",
@@ -199,13 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "###############################################################################\n",
     "# 1. CONFIGURATION\n",
     "###############################################################################\n",
+    "\n",
+    "# Define the job name (for output file)\n",
+    "job_name = input(\"Job name: \")\n",
     "\n",
     "# Load environment variables from config.env\n",
     "load_dotenv('./config.env')\n",
@@ -231,43 +233,90 @@
     "\n",
     "# Define chunking parameters\n",
     "CHUNK_WORD_TARGET = 500  # Target words per chunk\n",
-    "MAX_SUMMARY_WORDS = 250  # Maximum words in running summary before summarization\n",
+    "MAX_SUMMARY_WORDS = 300  # Maximum words in running summary before summarization\n",
     "ENABLE_SUMMARY_SUMMARIZATION = True  # Toggle for summary summarization\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[debug] Encodings: locale UTF-8, fs utf-8, pref UTF-8, out UTF-8 (No ANSI), error UTF-8 (No ANSI), screen UTF-8 (No ANSI)\n",
+      "[debug] yt-dlp version stable@2025.02.19 from yt-dlp/yt-dlp [4985a4041] (pip) API\n",
+      "[debug] params: {'cookiesfrombrowser': ('firefox',), 'verbose': 'True', 'compat_opts': set(), 'http_headers': {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.159 Safari/537.36', 'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8', 'Accept-Language': 'en-us,en;q=0.5', 'Sec-Fetch-Mode': 'navigate'}}\n",
+      "[debug] Python 3.13.0 (CPython x86_64 64bit) - Linux-6.11.0-19-generic-x86_64-with-glibc2.39 (OpenSSL 3.0.13 30 Jan 2024, glibc 2.39)\n",
+      "[debug] exe versions: none\n",
+      "[debug] Optional libraries: brotli-1.0.9, certifi-2024.08.30, requests-2.32.3, sqlite3-3.45.3, urllib3-2.2.3, websockets-14.1\n",
+      "[debug] Proxy map: {}\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Transcribing audio... please wait.\n",
       "YouTube URL detected. Extracting audio URL...\n",
-      "Extracting cookies from firefox\n",
-      "Extracted 1792 cookies from firefox\n",
-      "[youtube] Extracting URL: https://www.youtube.com/watch?v=9-Jl0dxWQs8&pp=ygUUaG93IGxsbXMgc3RvcmUgZmFjdHM%3D\n",
-      "[youtube] 9-Jl0dxWQs8: Downloading webpage\n",
-      "[youtube] 9-Jl0dxWQs8: Downloading tv client config\n",
-      "[youtube] 9-Jl0dxWQs8: Downloading player 82345d49\n",
-      "[youtube] 9-Jl0dxWQs8: Downloading tv player API JSON\n"
+      "Extracting cookies from firefox\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: ffmpeg not found. The downloaded format may not be the best available. Installing ffmpeg is strongly recommended: https://github.com/yt-dlp/yt-dlp#dependencies\n"
+      "[debug] Extracting cookies from: \"/home/nicola/snap/firefox/common/.mozilla/firefox/jnaig3c6.default/cookies.sqlite\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted audio URL: https://rr5---sn-5hnekn7l.googlevideo.com/videoplayback?expire=1742395608&ei=eITaZ__DA5qL6dsP1JeNiQ0&ip=213.39.100.109&id=o-AMg0v59HJAgHBHBvO-PbK_goChCFi2c_okbjGdQnpIuD&itag=140&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&met=1742374008%2C&mh=1U&mm=31%2C29&mn=sn-5hnekn7l%2Csn-5hne6nz6&ms=au%2Crdu&mv=m&mvi=5&pl=24&rms=au%2Cau&initcwndbps=2485000&siu=1&bui=AccgBcMD0QLsVAjg9eqU6HXi6s79yWdKyB64ekzlK8EQGbr76tV6PXSGpWDc4NW9OqcouSs1&vprv=1&svpuc=1&xtags=acont%3Doriginal%3Alang%3Den&mime=audio%2Fmp4&ns=h40OYPrqnVs4Dalkp9CpRngQ&rqh=1&gir=yes&clen=22047987&dur=1362.291&lmt=1730836166011665&mt=1742373480&fvip=5&keepalive=yes&lmw=1&c=TVHTML5&sefc=1&txp=4532434&n=nsVKog58DDJMAA&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Csiu%2Cbui%2Cvprv%2Csvpuc%2Cxtags%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRQIhAMfXFwK-QAIMNpvc-BAwcuWxVkE6AGCLmFUylS5OelIMAiBVRKysaO3ZiFbekpadXUVEz1VIzTZ7tJsYdONYfB0Vsw%3D%3D&lsparams=met%2Cmh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Crms%2Cinitcwndbps&lsig=AFVRHeAwRAIgVXXfyXTZw7biLBUGLL1hFDhdfdusxHJBgE7jXlCgnIsCIAhZyqejTxovPLnaf5ff9W25b8EpALuVTfLtqOs8_Xlp\n",
-      "Transcription complete.\n"
+      "Extracted 1795 cookies from firefox\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[debug] Request Handlers: urllib, requests, websockets\n",
+      "[debug] Loaded 1841 extractors\n",
+      "[debug] [youtube] Found YouTube account cookies\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=9vM4p9NN0Ts&t=28s&pp=ygUHTUlUIGxsbQ%3D%3D\n",
+      "[youtube] 9vM4p9NN0Ts: Downloading webpage\n",
+      "[youtube] 9vM4p9NN0Ts: Downloading tv client config\n",
+      "[youtube] 9vM4p9NN0Ts: Downloading player 82345d49\n",
+      "[youtube] 9vM4p9NN0Ts: Downloading tv player API JSON\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[debug] Loading youtube-nsig.82345d49 from cache\n",
+      "[debug] [youtube] Decrypted nsig mMRyRm7PI5TMRguQ => EVTbR_tjv5BhVw\n",
+      "[debug] Loading youtube-nsig.82345d49 from cache\n",
+      "[debug] [youtube] Decrypted nsig JJBMiYw7m5KKx6oj => GmEPKBrTsj2iig\n",
+      "[debug] Sort order given by extractor: quality, res, fps, hdr:12, source, vcodec, channels, acodec, lang, proto\n",
+      "[debug] Formats sorted by: hasvid, ie_pref, quality, res, fps, hdr:12(7), source, vcodec, channels, acodec, lang, proto, size, br, asr, vext, aext, hasaud, id\n",
+      "WARNING: ffmpeg not found. The downloaded format may not be the best available. Installing ffmpeg is strongly recommended: https://github.com/yt-dlp/yt-dlp#dependencies\n",
+      "[debug] Default format spec: best/bestvideo+bestaudio\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YouTube video audio URL: https://rr5---sn-5hne6nzd.googlevideo.com/videoplayback?expire=1742399055&ei=75HaZ8mAC9K-i9oPr7voqQ4&ip=213.39.100.109&id=o-AN_dgsnlT3k3QcyMDUvUAkdIedenddyiGxyOosREqalk&itag=140&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&met=1742377455%2C&mh=_J&mm=31%2C29&mn=sn-5hne6nzd%2Csn-5hneknes&ms=au%2Crdu&mv=m&mvi=5&pl=24&rms=au%2Cau&initcwndbps=3118750&siu=1&bui=AccgBcNeEKG0eSnPxcp1QNy1F7Sth8wBfOrRa83Ra8REqFbXKP-UZPd4hE4gTMz3Qz7mpf1j&vprv=1&svpuc=1&mime=audio%2Fmp4&ns=DOkXPhUqNhxiUSyhLRvf6XUQ&rqh=1&gir=yes&clen=101484952&dur=6270.687&lmt=1724828401738727&mt=1742377253&fvip=1&keepalive=yes&lmw=1&c=TVHTML5&sefc=1&txp=5432434&n=GmEPKBrTsj2iig&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Csiu%2Cbui%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRQIgN3JiVgXsegfG8cvmKEphVgrAaF-Zm4m7REYBxo2Po0kCIQCVAvkFf_SEWj_jPlqmZ_U3kipvkuTRzvQoJHXCVo2YtQ%3D%3D&lsparams=met%2Cmh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Crms%2Cinitcwndbps&lsig=AFVRHeAwRAIgU25u2cpN0j1qir9UiGSHEfTL3lPLoUmPQDz1Q4WsEnMCIDdF3E-NzSM4dfUSBK_hMGmM-aU7iOHanx3SlCwqHvDh\n"
      ]
     }
    ],
@@ -292,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,25 +370,14 @@
      "output_type": "stream",
      "text": [
       "Rewriting chunk 1/9...\n",
-      "Summary for chunk 1: Large language models, like those developed by Google DeepMind, store factual knowledge, such as the association between Michael Jordan and basketball, within specific network segments called multilayer perceptrons, though the exact mechanisms of this storage remain complex and not fully understood.\n",
       "Rewriting chunk 2/9...\n",
-      "Summary for chunk 2: The text explains how input tokens are transformed into high-dimensional vectors through attention and multilayer perceptrons, enabling the model to predict subsequent tokens by encoding nuanced meanings and relationships, such as gender and factual information, within the vector space.\n",
       "Rewriting chunk 3/9...\n",
-      "Summary for chunk 3: The text explains how vectors representing the names \"Michael\" and \"Jordan\" in a multilayer perceptron encode the concept of basketball through dot products and independent transformations, ultimately resulting in an output vector that incorporates the idea of basketball.\n",
       "Rewriting chunk 4/9...\n",
-      "Summary for chunk 4: The matrix contains learned model parameters that adjust the model's behavior through dot products with input vectors, while incorporating a bias to refine outputs, and is designed with nearly 50,000 rows to optimize hardware efficiency.\n",
       "Rewriting chunk 5/9...\n",
-      "Summary for chunk 5: The process involves mapping input vectors into a higher-dimensional space using a weight matrix, applying a nonlinear function like ReLU to produce binary outputs, and illustrating the activation of neurons in a neural network through matrix multiplication and bias addition.\n",
       "Rewriting chunk 6/9...\n",
-      "Summary for chunk 6: The down projection matrix processes input vectors by summing the scaled columns corresponding to active neurons, with each column representing a direction in the embedding space, while a bias is consistently added, ultimately yielding a combined output that encapsulates the features associated with the input.\n",
       "Rewriting chunk 7/9...\n",
-      "Summary for chunk 7: The operation of a neural network, exemplified by GPT-3, involves two matrix products with biases and clipping, contributing to a total of approximately 175 billion parameters, with a focus on how information is encoded in high-dimensional spaces.\n",
-      "Running summary exceeds maximum word limit. Summarizing the running summary...\n",
-      "Summarized running summary: Large language models like those from Google DeepMind utilize multilayer perceptrons to encode and store factual knowledge and relationships in high-dimensional vector spaces, enabling complex predictions through matrix operations and learned parameters.\n",
       "Rewriting chunk 8/9...\n",
-      "Summary for chunk 8: Neurons often represent overlapping features rather than distinct ones due to the concept of superposition, which, when combined with the properties of high-dimensional spaces, allows for an exponential increase in the number of nearly orthogonal vectors that can be accommodated.\n",
-      "Rewriting chunk 9/9...\n",
-      "Summary for chunk 9: Large language models can store more independent ideas than dimensions in their space by utilizing nearly perpendicular directions, which enhances their performance and suggests a complex interplay of neuron activations rather than distinct feature discernibility.\n"
+      "Rewriting chunk 9/9...\n"
      ]
     }
    ],
@@ -349,7 +387,8 @@
     "running_summary = \"\"  # Will accumulate short summaries of prior chunks\n",
     "\n",
     "for i, chunk_text in enumerate(chunks, start=1):\n",
-    "    print(f\"Rewriting chunk {i}/{len(chunks)}...\")\n",
+    "    print(\"Revriting the transcript ...\")\n",
+    "    # print(f\"Rewriting chunk {i}/{len(chunks)}...\")\n",
     "\n",
     "    # Rewrite the chunk\n",
     "    try:\n",
@@ -368,7 +407,7 @@
     "    # Summarize this revised chunk to update context\n",
     "    try:\n",
     "        chunk_summary = summarize_text_with_openai(revised_text, model=OPENAI_MODEL)\n",
-    "        print(f\"Summary for chunk {i}: {chunk_summary}\")\n",
+    "        # print(f\"Summary for chunk {i}: {chunk_summary}\")\n",
     "    except RuntimeError as e:\n",
     "        print(f\"Error summarizing chunk {i}: {str(e)}\")\n",
     "        chunk_summary = \"\"\n",
@@ -379,11 +418,11 @@
     "        running_summary += f\" {chunk_summary}\"\n",
     "        # Check if running_summary exceeds MAX_SUMMARY_WORDS\n",
     "        if get_word_count(running_summary) > MAX_SUMMARY_WORDS:\n",
-    "            print(\"Running summary exceeds maximum word limit. Summarizing the running summary...\")\n",
+    "            # print(\"Running summary exceeds maximum word limit. Summarizing the running summary...\")\n",
     "            try:\n",
     "                summarized_running_summary = summarize_text_with_openai(running_summary, model=OPENAI_MODEL)\n",
     "                running_summary = summarized_running_summary\n",
-    "                print(f\"Summarized running summary: {running_summary}\")\n",
+    "                # print(f\"Summarized running summary: {running_summary}\")\n",
     "            except RuntimeError as e:\n",
     "                print(f\"Error summarizing running summary: {str(e)}\")\n",
     "                # Optionally, you can reset the running_summary or keep it as is\n",
@@ -393,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,20 +505,23 @@
     }
    ],
    "source": [
-    "# 4) Output the final revised text\n",
-    "print(\"\\n=== FINAL REWRITTEN TRANSCRIPT ===\\n\")\n",
+    "import json\n",
+    "\n",
+    "# 4) Output the final revised text and running summary as a JSON file\n",
     "final_text = \"\\n\".join(final_rewritten_text)\n",
-    "print(final_text)\n",
     "\n",
-    "# Optionally, save the final text to a file\n",
-    "# Uncomment the lines below to enable saving to a text file\n",
+    "data = {\n",
+    "    \"final_text\": final_text,\n",
+    "    \"running_summary\": running_summary\n",
+    "}\n",
     "\n",
+    "output_filename = f\"transcript_{job_name}.json\"\n",
     "try:\n",
-    "    with open(f\"transcript_{OPENAI_MODEL}.txt\", \"w\", encoding=\"utf-8\") as f:\n",
-    "        f.write(final_text)\n",
-    "    print(\"Final transcript saved to final_transcript.txt\")\n",
+    "    with open(output_filename, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(data, f, indent=4)\n",
+    "    print(f\"Final transcript and running summary saved to {output_filename}\")\n",
     "except Exception as e:\n",
-    "    print(f\"Error saving final transcript: {str(e)}\")\n",
+    "    print(f\"Error saving JSON file: {str(e)}\")\n",
     "\n",
     "print(\"\\nDone.\")\n"
    ]
