--- a/Sbobb.ipynb
+++ b/Sbobb.ipynb
@@ -508,7 +508,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final transcript and running summary saved to transcript_StandUni.json\n",
+      "Final transcript and running summary saved to transcript_Standford_University_Building_LLMs.json\n",
       "\n",
       "Done.\n"
      ]
