new sbobb.py fiile and readme

--- a/Sbobb.ipynb
+++ b/Sbobb.ipynb
@@ -27,6 +27,8 @@
     "# Define the job name (for output file)\n",
     "job_name = input(\"Job name: \")\n",
     "\n",
+    "transcription_service='whisperx'\n",
+    "\n",
     "# Load environment variables from config.env\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv('./config.env')\n",
@@ -37,8 +39,8 @@
     "\n",
     "# Validate API keys based on selected transcription service\n",
     "# transcription_service = input(\"Choose transcription service (whisper/assemblyai): \").lower()\n",
-    "transcription_service='whisper'\n",
-    "if transcription_service not in ['whisper', 'assemblyai']:\n",
+    "\n",
+    "if transcription_service not in ['whisper','whisperx', 'assemblyai']:\n",
     "    raise ValueError(\"Invalid transcription service. Choose 'whisper' or 'assemblyai'\")\n",
     "\n",
     "if transcription_service == 'assemblyai' and not ASSEMBLYAI_API_KEY:\n",
@@ -577,7 +579,7 @@
    "outputs": [],
    "source": [
     "# audio_source = input('Path to audio file: ')\n",
-    "audio_source = r\"C:\\Users\\nicco\\Downloads\\storia romana lezione 2 del 2 ottobre 25.mp3\"\n",
+    "audio_source = r\"C:\\Users\\nicco\\Downloads\\storia_romana_4.2.mp3\"\n",
     "\n",
     "print(\"Transcribing audio... please wait.\")\n",
     "\n",
@@ -589,7 +591,7 @@
     "# Medium is 2.7x slower than Small, Turbo is 3.3x slower, distill-large 3.1x, large-v3 is 5x\n",
     "# batch_size and device only inlfuence whisper. \n",
     "\n",
-    "full_transcript_text = transcribe_audio(audio_source,  language_code='it', service='whisperx', model = 'large-v3-turbo', batch_size=6, beam_size=6, device = 'cpu')\n"
+    "full_transcript_text = transcribe_audio(audio_source,  language_code='it', service=transcription_service, model = 'large-v3-turbo', batch_size=6, beam_size=6, device = 'cpu')\n"
    ]
   },
   {
@@ -671,23 +673,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_rewritten_text[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import json\n",
-    "import codecs\n",
-    "#job_name = 'int8_medium_batch12'\n",
+    "import re\n",
+    "\n",
     "# 4) Output the final revised text and running summary as a JSON file\n",
     "final_text = \" \".join(final_rewritten_text)\n",
     "\n",
+    "# Correzione delle sequenze di escape letterali nel testo\n",
+    "final_text = re.sub(r'\\\\n', '\\n', final_text)  # Converti \\n in veri a capo\n",
+    "final_text = re.sub(r\"\\\\'\", \"'\", final_text)   # Converti \\' in apostrofi normali\n",
+    "final_text = re.sub(r'\\\\\"', '\"', final_text)   # Converti \\\" in virgolette normali\n",
+    "final_text = re.sub(r'\\\\t', '\\t', final_text)  # Converti \\t in tabulazioni\n",
+    "\n",
     "data = {\n",
-    "    \"final_text\": codecs.decode(final_text, \"unicode_escape\") ,\n",
+    "    \"final_text\": final_text,\n",
     "    \"running_summary\": running_summary,\n",
     "    \"audio_transcript\": \" \".join(chunks)\n",
     "}\n",
@@ -695,12 +694,12 @@
     "output_filename = f\"transcript_{job_name}.json\"\n",
     "try:\n",
     "    with open(output_filename, \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump(data, f, indent=4)\n",
+    "        json.dump(data, f, ensure_ascii=False, indent=4)  # ensure_ascii=False preserva i caratteri non-ASCII\n",
     "    print(f\"Final transcript and running summary saved to {output_filename}\")\n",
     "except Exception as e:\n",
     "    print(f\"Error saving JSON file: {str(e)}\")\n",
     "\n",
-    "print(\"\\nDone.\")\n"
+    "print(\"\\nDone.\")"
    ]
   },
   {
@@ -710,27 +709,6 @@
    "outputs": [],
    "source": [
     "final_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import codecs\n",
-    "\n",
-    "out = codecs.decode(final_text, \"unicode_escape\")   # or: s.encode().decode(\"unicode_escape\")\n",
-    "print(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\" \".join(final_rewritten_text)"
    ]
   }
  ],
